--- a/UIPrototype/UIPrototype/UIPrototype/MainPage.xaml
+++ b/UIPrototype/UIPrototype/UIPrototype/MainPage.xaml
@@ -2,6 +2,7 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:local="clr-namespace:UIPrototype"
+            xmlns:maps="clr-namespace:Xamarin.Forms.Maps;assembly=Xamarin.Forms.Maps"
              x:Class="UIPrototype.MainPage">
     <Grid x:Name="mainGrid" Margin="0,5,0,0" BackgroundColor="White" >
         <Grid.ColumnDefinitions>
@@ -9,13 +10,20 @@
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
             <RowDefinition/>
-            <RowDefinition Height="400"/>
+            <RowDefinition Height="500"/>
         </Grid.RowDefinitions>
-        <Label Text="Welcome to Xamarin.Forms!" 
+        <Label Text="Follow me!" 
                Grid.Column="0" Grid.Row="0" 
                TextColor="Black" 
                VerticalOptions="Center" 
                HorizontalOptions="Center" />
+        <StackLayout Grid.Column="0" Grid.Row="1">
+            <maps:Map
+                x:Name="MyMap"
+                IsShowingUser="true"
+                MapType="Street"
+            />
+        </StackLayout>
     </Grid>
 	
 
